Fix horizontal scroll behavior

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,12 @@ body {
     background-color: var(--bg-page);
     color: var(--text-main);
     height: 100%;
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
+}
+
+html, body {
+    scroll-behavior: smooth;
+    
 }
 
 section {
